# VulkanSDLApp

./: .gitignore  BRDF.h  Camera.h  CameraController.h  CameraFunctions.h  CircleRange.h  ColorTemperature.h  CubemapBackground.fragment.glsl  CubemapBackground.vertex.glsl  CubemapBackgroundPipeline.h  CubemapFunctions.h  Environment.h  Envmap.h  FileFunctions.h  FlyingCameraController.h  FullscreenTriangle.vertex.glsl  ImageFunctions.h  Material.h  MeshFunctions.h  MeshObject.h  Model.h  ObjFile.h  OrbitCameraController.h  Pipeline.h  ProcessAssets.cpp  ProcessEnvmap.cpp  README.md  RenderSurface.h  RenderingConfig.h  SunExtraction.h  SurfaceFormatSet.h  Swapchain.h  TextureLoader.h  Tonemap.fragment.glsl  Tonemapper.h  UniformBuffer.h  Vertex.h  VulkanContext.h  VulkanFunctions.h  VulkanSDLApp.cpp  (+7 more)
assets/: brdf.asset.yaml  dfg.asset.yaml  golden_gate_hills_4k.exr.asset.yaml  mirrored_hall_1k.exr.asset.yaml  wooden_stool_02_4k.mtl
resources/: wooden_stool_02_4k.mtl
resources/rosendal_plains_1_8k/: nx.exr  nz.exr  px.exr  py.exr  pz.exr
